apps/cntu/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cntu
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cntu
      app.kubernetes.io/instance: cntu
  template:
    spec:
      containers:
        - name: cntu
          resources:
            limits:
              cpu: 2000m
              memory: 2G
              ephemeral-storage: 2G
            requests:
              cpu: 100m
              memory: 1G
              ephemeral-storage: 256M
